# electrolyser

./: .gitignore  AUTHOR  CMakeLists.txt  adc.c  adc.h  debug.h  dma.c  dma.h  flash.sh  main.c  my-usb.rules  openocd-nrf52.cfg  openocd-samd.cfg  openocd-stm32.cfg  pwm.c  twr  uart.c  udc.c  usb.c  usb.h  usb_cdc.c  usb_cdc.h
docs/: hisotry.ltx  task2.ltx  task3.ltx  task4.ltx  task5.ltx  tasks.ltx
fpga/based6502/common/: counter.v  ring.v  shift.v
fpga/based6502/haskell_fpga/: Makefile  Top.hs  io.pcf
fpga/based6502/sram_reg/: Makefile  io.pcf  logic.v
fpga/based6502/uart_ctl/: Makefile  capture.v  io.pcf  logic.v  mem_tx.v  top.v  uart_ctl.v
fpga/based6502/uart_sram/: acia.v  logic.v  top.v  uart_ctl.v
fpga/chacha20/: Makefile  chacha20.v
fpga/dsp/dsp_DLL_correlator/: Makefile  dispatcher.v  fm_demod.v  iabs_demod.v  iq_demod.v  phase_demod.v  psk_demod.v  sig_source.v  top.json
fpga/dsp/dsp_am_detector/: hex_dump.v  top.json
fpga/dsp/dsp_codes_correlator/: Makefile  dispatcher.v
fpga/dsp/dsp_codes_tx/: Makefile  top.v
fpga/dsp/dsp_correlator/: Makefile  correlator.v  digitizer.v  dispatcher.v  dispatcher_ctl.v  flag_holder.v  hex_dump.v  input_stab.v  osc.v  sig_source.v  top.v
fpga/dsp/dsp_nco_correlator_hello_world/: Makefile  dispatcher.v  dispatcher_ctl.v  fifo.v  hex_dump.v  io.pcf  top.v
fpga/dsp/dsp_phase_dumper/: Makefile  dispatcher.v  hex_dump.v  osc.v  top.v
fpga/dsp/dsp_power_dumper/: Makefile  dispatcher.v  hex_dump.v  io.pcf  osc.v  spi_master.v  spi_writer.v  top.v
fpga/dsp/dsp_power_dumper_spi/: hex_dump.v  top.json  top.v
fpga/dsp/dsp_psk_correlator/: Makefile  correlator.v  digitizer.v  dispatcher.v  dispatcher_ctl.v  fifo.v  fifo_stage.v  flag_holder.v  hex_dump.v  input_stab.v  mass_or.v  mstage_fifo.v  nco.v  osc.v  psk_demod.v  sigsv2.v  top.v
fpga/dsp/dsp_psk_xmit/: Makefile  dispatcher.v  dispatcher_ctl.v  hex_dump.v  io.pcf  top.v
fpga/dsp/dsp_rf/: Makefile  top.v
fpga/dsp/dsp_spi_dump/: Makefile  io.pcf  top.v
fpga/dsp/dsp_tx_android/: Makefile  io.pcf  osc.v  pllconf  top.json  top.v
fpga/dsp/lab_filters_osc_imp_zero_dc/: Makefile  dispatcher.v  hex_dump.v  io.pcf  top.v
fpga/dsp/lvds_in/: io.pcf  top.v
fpga/dsp/lvds_spi_dump/: dispatcher_ctl.v  osc.v
fpga/fpga-cam/test_gpio_cam/: io.pcf  top.v
fpga/nandctl/: Makefile  flash_ifc.v  io.pcf  logic.v  top.v
fpga/phase_dsp/beacon/: Makefile  adjust.v  correlator.v  dispatcher.v  fifo_stage.v  hex_dump.v  top.json  top.v  tx.v
fpga/phase_dsp/const_tx/: adjust.v  io.pcf  ipll.v  top.json  top.v  tx.v
fpga/phase_dsp/ice40brk_test_amp/: Makefile  adjust1.v  am_detector.v  digitizer.v  dispatcher.v  hex_dump.v  io.pcf  spi_slave.v  top.v
fpga/phase_dsp/phase_2xRx/: Makefile  adjust.v  adjust1.v  dispatcher.v  hex_dump.v  io.pcf  ipll.v  iq_demod.v  top.json  top.v
fpga/phase_dsp/phase_2xRx_bitdump/: adjust.v  adjust1.v  correlator.v  dispatcher.v  hex_dump.v  io.pcf  mass_or.v  osc.v  spi_slave.v  top.json  top.v
fpga/phase_dsp/phase_ping/: Makefile  adjust.v  correlator.v  dispatcher.v  hex_dump.v  pseudo_code.v  psk_demod.v  top.json  top.v  tx.v
fpga/spi_dump/: spi_slave.v  top.v
fpga/test_proj/: Makefile  io.pcf  top.v
fpga/test_proj_5k/: io.pcf  top.v
hardware/libs/: digital.dcm  digital.lib  electrolyser_electrodes.bck  electrolyser_electrodes.dcm  electrolyser_electrodes.lib
hardware/libs/electrodes.pretty/: Electrode_PCB_V0.1.kicad_mod  Electrode_ThroughHole_V0.1.kicad_mod
hardware/libs/kifootp.pretty/: 1575at43a0040.kicad_mod  (+13 more)
host_c/iceprog/: HelloWorld.c  HelloWorld.h  Makefile  java_bridge.c
host_c/spi_dump/: Makefile  iceprog.c  java_bridge.c  mpsse.c  mpsse.h  org_allesoft_correlator_experiment_JavaBridge.h
host_c/spi_host/: Makefile  java_bridge.c  org_allesoft_correlator_experiment_JavaBridge.h  spi_lib.c
java/: camread.sh  raw2rgbDesign
java/and-fuse-uit-gpio/: settings.gradle.kts
java/android/: settings.gradle
java/android_speed/: settings.gradle.kts
java/current-back/: build.gradle.kts  settings.gradle.kts
java/simple_host/: lsusb  pom.xml
make/: Makefile
mcu/lpc/: LPC4320_M4_memory.ld  flash.sh  openocd.cfg
mcu/lpc/ctl/: CMakeLists.txt  calib_1d  log1  log_1d  main.c
mcu/lpc/ctl/ctl/: defs.h  imu.c  mixer.c  sensors.c  systime.c
mcu/lpc/ctl/icm20689/: accgyro_icm20689.h  accgyro_mpu.h
mcu/lpc/ctl/logs/: log_2w
mcu/nrf52/examples/timer_capture/: CMakeLists.txt  adc_logic.h  ble_lbs.c  ble_lbs.h  cross.c  flash.sh  gpio_logic.c  main.c  timer_capture.c  timer_test.c
mcu/nrf52/examples/timer_capture/ble112_config/: sdk_config.h
mcu/nrf52/monitor/: CMakeLists.txt  blinky.ld  rf_uart.c
mcu/nrf52/monitor-nrf5210/: CMakeLists.txt  blinky.ld  openocd-old.cfg  rf_uart.c
mcu/nrf52/monitor/ble_config/: sdk_config.h
mcu/samd11/stage1_digital_usb/: CMakeLists.txt  flash.sh  main.c  openocd-stlink-samd11.cfg  usb.c
mcu/samd11/stage1_digital_usb/fpga_ifc/: gpio.c  spi_master.c  uart.c  uart.h
mcu/samd11/stage1_digital_usb/logic/: special.c  special.h
mcu/samd11/stage1_digital_usb/std_hal/: hal_gpio.h
mcu/samd11/stage1_digital_usb/usb_ifc/: usb_descriptors.c  usb_descriptors.h  usb_std_chapter6.c
mcu/stm32/stm32f1ctl/: CMakeLists.txt  flash.sh
mcu/stm32/stm32f1ctl/CMake/: GNU-ARM-Toolchain.cmake
mcu/stm32/stm32f1ctl/lib/: CMakeLists.txt
mcu/stm32/stm32f1ctl/lib/stm32f1/: CMakeLists.txt
mcu/stm32/stm32f1ctl/src/: CMakeLists.txt  main.cpp
mcu/stm32/stm32f1ctl/src/code/: pwm.c  spi.c
mcu/stm32/stm32f1ctl/src/ctl/: defs.h  icm20689.c  imu.c  systime.c
mcu/stm32/stm32f1ctl/tools/: stm32f4discovery.cfg
mcu/stm32/stm32f4ctl/: CMakeLists.txt  flash.sh
mcu/stm32/stm32f4ctl/lib/STM32F4xx_StdPeriph_Driver/: CMakeLists.txt
mcu/stm32/stm32f4ctl/linker/: stm32f401.ld
mcu/stm32/stm32f4ctl/src/: CMakeLists.txt  main.cpp
mcu/stm32/stm32f4ctl/src/code/: io.c  pwm.c  spi.c
mcu/stm32/stm32f4ctl/src/ctl/: control.c  defs.h  icm20689.c  imu.c  manual.c  mixer.c  sensors.c  systime.c
mcu/stm32/stm32f4ctl/src/manual/: manual.c
povray/: chair_s00.inc  soft_light.pov
(+33295 files in other folders)
